Piccoli test per le modifiche alla versione mobile

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -243,6 +243,10 @@
 }
 
 /* STILE SECTION 1 */
+.m-section1-mobile{
+  display: none;
+}
+
 .contenitore-generale {
     width: 100%;
     margin: 0 auto;
