--- a/CSS/media-global_style.css
+++ b/CSS/media-global_style.css
@@ -86,7 +86,7 @@
 }
 
 /*MEDIA QUERY IPHONE 12 PRO*/
-@media only screen and (min-device-width: 390px) and (max-device-height: 844px) and (orientation: portrait) {
+@media only screen and (min-width: 320px) and (max-width: 768px) {
   /* STYLE NAVBAR MEDIA IPHONE */
   /* .navbar-container-general {
   display: none;
@@ -127,8 +127,18 @@
   }
 
   /* STYLE SECTION1 MEDIA IPHONE */
+  .m-section1-mobile{
+    display: flex;
+  }
+
   .m_section1 {
     display: none;
+  }
+  .img-section1-mobile{
+    max-width: 300px;
+  }
+  .imgs1-mobile{
+    max-width: 390px;
   }
 }
 
@@ -215,6 +225,7 @@
 .box2-footer2 {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   height: auto;
   width: 70%;
   background-color: #1f1d48;
@@ -249,6 +260,7 @@
 .box3-footer2 {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   height: 200px;
   width: 100%;
   background-color: #1f1d48;
@@ -314,6 +326,12 @@
 
 .li-f2-link:hover {
   text-decoration: underline;
+}
+
+/* STYLE FOOTER3 MEDIA IPHONE */
+
+.container-footer3{
+  flex-wrap: wrap;
 }
 
 /*media query caroselli*/
