--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -927,7 +927,9 @@ a {
   width: 90%;
   padding-top: 65px;
 }
-
+.title-main-section8-mobile{
+  display: none;
+}
 .title-main-section8 {
   display: flex;
   flex-direction: row;
