--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -1,6 +1,6 @@
 /* STYLE CONTENITORE GENERALE MEDIA IPHONE */
  /*MEDIA QUERY IPHONE 12 PRO*/
-@media only screen and (min-width: 320px) and (max-width: 768px) {
+@media only screen and (min-width: 320px) and (max-width: 768px) and (orientation: portrait){
   /* STYLE NAVBAR MEDIA IPHONE */
   /* .navbar-container-general {
   display: none;
@@ -148,6 +148,126 @@
   
 }
 
+/* STYLE SECTION 2 MEDIA IPHONE */
+.m_section2{
+  display: none;
+}
+
+
+.main-section2-mobile{
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  width: 90%;
+  /* padding-top: 65px; */
+  overflow: scroll;
+}
+
+.container-section2-mobile {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: auto;
+  width: 100%;
+  background-color: white;
+  color: black;
+}
+
+.title-main-section2-mobile {
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  width: 100%;
+  padding: 10px;
+  color: black;
+}
+
+.title-main-section2 {
+  display: none;
+}
+
+.title-main-section2-mobile h2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+
+
+.container-s2-mobile {
+  display: flex;
+  justify-content: center;
+}
+
+.container-card-mobile {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  width: 50%;
+  height: auto;
+}
+
+.card{
+  display: flex;
+  flex-direction: column;
+  padding-left: 1.25rem;
+  height: auto;
+  /* width: 100%; */
+}
+
+.card a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.img-section2{
+  height: 203px;
+  width: 293px;
+}
+
+.container-h3-s2{
+  display: flex;
+  justify-content: center;
+  font-size: 1.25rem;
+  font-weight: 500;
+  padding-top: 15px;
+}
+
+.container-text-s2{
+  text-align: center;
+  text-wrap: wrap;
+  font-size: 0.875rem;
+  font-weight: 400;
+  padding-top: 10px;
+
+}
+
+.container-shop-now2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.3125rem;
+  padding: 1.25rem;
+}
+
+.shop-now2{
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.snow2-2{
+  padding-top: 2.8125rem ;
+}
+
+.snow2-3{
+  padding-top: 60px;
+}
+.iper-centrale-s2:hover{
+  text-decoration: underline;
+}
 
 
 /* STYLE SECTION 8 MEDIA IPHONE */
