Aggiunte modifiche navbar

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -30,6 +30,10 @@
 }
 
 /*STILE NAVBAR*/
+.navbar-container-general-mobile{
+  display: none;
+}
+
 .navbar-container-general {
   position: sticky;
   height: auto;
