--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -637,4 +637,48 @@
   flex-wrap: wrap;
 }
 
+
+
+/* Nascondi il menu a tutta pagina di default */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  display: none;
+}
+
+.overlay-content {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+}
+
+.overlay ul {
+  list-style: none;
+  padding: 0;
+}
+
+.overlay ul li {
+  margin-bottom: 10px;
+}
+
+.overlay ul li a {
+  text-decoration: none;
+  color: black;
+}
+
+/* Mostra il menu a tutta pagina quando il menu hamburger è cliccato */
+.overlay.active {
+  display: block;
+}
+
 }
