--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -122,12 +122,6 @@
   box-shadow: none;
 }
 
-/* .menu-search{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-} */
-
 .sign-in-link-style{
   display: flex;
   justify-content: center;
@@ -146,7 +140,78 @@
   color: black;
 }
 
+/* Overlay */
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  display: none;
+}
+
+.overlay-content {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  /* padding: 20px; */
+}
+
+.overlay ul {
+  list-style: none;
+  padding: 0;
+}
+
+.overlay ul li {
+  margin-bottom: 10px;
+}
+
+.overlay ul li a {
+  text-decoration: none;
+  color: black;
+}
+
+/* Mostra il menu a tutta pagina quando il menu hamburger è cliccato */
+.overlay.active {
+  display: block;
+}
+.overlay-bar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 30px;
+  background-color: #f8f8f8;
+  padding-top: 30px;
+  padding-bottom: 25px;
+  padding-left: 15px;
+  padding-right: 5px;
+  border-bottom: 2px solid rgb(255, 213, 2);
+}
+
+.overlay-bar-text{
+  font-size: 1.25rem;
+}
+
+.x-button-mobile-overlay{
+  padding: 19px 19px 16px 19px;
+  background-color: transparent;
+  border: none;
+  border-left: 1px solid rgb(189, 189, 189);
+}
+
+}
+
+
+
+
+/* STYLE GENERAL MEDIA IPHONE */
 .contenitore-generale {
     width: 100%; /* Adatta la larghezza del container allo schermo */
     margin: 0 auto; /* Centra il container orizzontalmente */
@@ -640,46 +705,3 @@
 
 
 
-/* Nascondi il menu a tutta pagina di default */
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
-  display: none;
-}
-
-.overlay-content {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 20px;
-}
-
-.overlay ul {
-  list-style: none;
-  padding: 0;
-}
-
-.overlay ul li {
-  margin-bottom: 10px;
-}
-
-.overlay ul li a {
-  text-decoration: none;
-  color: black;
-}
-
-/* Mostra il menu a tutta pagina quando il menu hamburger è cliccato */
-.overlay.active {
-  display: block;
-}
-
-}
