--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -190,13 +190,14 @@
   background-color: #f8f8f8;
   padding-top: 30px;
   padding-bottom: 25px;
-  padding-left: 15px;
   padding-right: 5px;
   border-bottom: 2px solid rgb(255, 213, 2);
 }
 
 .overlay-bar-text{
-  font-size: 1.25rem;
+  padding: 1.25rem;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
 .x-button-mobile-overlay{
