--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -141,16 +141,19 @@
 }
 
 /* Overlay */
-
 .overlay {
   position: fixed;
   top: 0;
-  left: 0;
+  left: -100%; 
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1000;
-  display: none;
+  transition: left 0.1s ease-out;
+}
+
+.overlay.active {
+  left: 0; 
 }
 
 .overlay-content {
@@ -161,7 +164,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
-  /* padding: 20px; */
 }
 
 .overlay ul {
@@ -178,10 +180,6 @@
   color: black;
 }
 
-/* Mostra il menu a tutta pagina quando il menu hamburger è cliccato */
-.overlay.active {
-  display: block;
-}
 .overlay-bar{
   display: flex;
   justify-content: space-between;
@@ -191,7 +189,7 @@
   padding-top: 30px;
   padding-bottom: 25px;
   padding-right: 5px;
-  border-bottom: 2px solid rgb(255, 213, 2);
+  border-bottom: 3px solid rgb(255, 213, 2);
 }
 
 .overlay-bar-text{
@@ -204,9 +202,11 @@
   padding: 19px 19px 16px 19px;
   background-color: transparent;
   border: none;
-  border-left: 1px solid rgb(189, 189, 189);
+  border-left: 1px solid rgb(224, 224, 224);
 }
 
+.icon-xbutton-mobile{
+  margin: 0 auto;
 }
 
 
