--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -206,9 +206,39 @@
 }
 
 .icon-xbutton-mobile{
+  font-size: 1rem;
   margin: 0 auto;
 }
 
+.links-overlay-container{
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  padding-top: 20px;
+  margin-left: 20px;
+  gap: 20px;
+}
+
+.button-area-giochi-mobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  height: 38px;
+  width: 350px;
+  margin-right: 20px;
+  background-color: #abd9ff;
+  text-decoration: none;
+  padding: 5px;
+  padding-left: 12px;
+  padding-right: 12px;
+  border-bottom: 2px solid rgba(48, 85, 181, 0.25);
+  border-radius: 3px;
+  color: black;
+  font-size: small;
+  font-weight: 500;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 3px;
+}
 
 
 
@@ -705,4 +735,4 @@
 }
 
 
-
+}
