--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -278,6 +278,15 @@
   border: none;
 }
 
+.link-10{
+  border-bottom: 1px solid rgb(224, 224, 224);
+}
+
+.m89{
+  font-size: 0.75rem;
+  font-weight: 500;
+}
+
 .overlay-join{
   display: flex;
 }
