--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -221,7 +221,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
   height: 38px;
   width: 350px;
   margin-right: 20px;
@@ -234,7 +234,7 @@
   border-bottom: 2px solid rgba(48, 85, 181, 0.25);
   border-radius: 3px;
   color: black;
-  font-size: small;
+  font-size: 0.75rem;
   font-weight: 500;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 3px;
 }
@@ -292,6 +292,29 @@
 }
 
 
+.skelet-link{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+}
+
+
+.shop-link-mobile {
+  display: flex;
+  gap: 300px;
+}
+
+.discover-link-mobile{
+  display: flex;
+  gap: 271px;
+}
+
+.help-link-mobile{
+  display: flex;
+  gap: 305px;
+}
 
 /* .help-overlay-link{
   border-bottom: 1px solid rgb(224, 224, 224);
