responsive section7 mobile added

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -914,6 +914,9 @@ a {
   background-color: white;
 }
 
+.m-section7-mobile {
+  display: none;
+}
 /*STILE SECTION 8*/
 .container-section8 {
   display: flex;
