--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -1042,7 +1042,7 @@ a {
   justify-content: left;
   width: 100%;
   padding: 10px;
-  padding-left: 3rem;
+  /* padding-left: 2rem; */
 }
 
 .title-main-section9 h2{
