--- a/CSS/media-tablet.css
+++ b/CSS/media-tablet.css
@@ -86,11 +86,15 @@
 }
 
 
-/*media query caroselli*/
 @media screen and (min-width: 1201px) {
-    .carousel-card {
-      width: calc(25% + 0.546875rem);
-    }
+  .crl-wrapper-media {
+    max-width: 82.5rem;
   }
+}
 
- 
+@media screen and (min-width: 601px) {
+  /*gestione caroselli*/
+  .hs {
+    grid-template-columns: repeat(12, 40%);
+  }
+}
