--- a/CSS/media-tablet.css
+++ b/CSS/media-tablet.css
@@ -92,7 +92,7 @@
   }
 }
 
-@media screen and (min-width: 601px) (max-width: 1200px){
+@media screen and (min-width: 601px) and (max-width: 1200px) {
   /*gestione caroselli*/
   .hs {
     grid-template-columns: repeat(12, 40%);
