--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -891,9 +891,12 @@
   flex-wrap: wrap;
 }
 
-/*caroselli*/
+}
+
+@media screen and (max-width: 600px) {
+  /*caroselli*/
 .hs {
-    grid-template-columns: repeat(12, 75%);
-    gap: 15px;
-  }
+  grid-template-columns: repeat(12, 75%);
+  gap: 15px;
+}
 }
