Modificato font size caroselli di Rossella

--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -893,6 +893,13 @@
 
 }
 
+/* --------------- */
+
+.carousel-title{
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+
 @media screen and (max-width: 600px) {
   /*caroselli*/
 .hs {
