--- a/CSS/media-tablet.css
+++ b/CSS/media-tablet.css
@@ -1,5 +1,5 @@
 /* MEDIA QUERY IPAD PRO */
-@media only screen and (min-device-width: 901px) and (max-device-width: 1200px) and (orientation: portrait) {
+@media only screen and (min-device-width: 901px) and (max-device-width: 1200px) {
   /* STYLE NAVBAR MEDIA IPAD */
   .sign-in-link-style > span {
     border: 0px;
