--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -1,6 +1,6 @@
 /* STYLE CONTENITORE GENERALE MEDIA IPHONE */
  /*MEDIA QUERY IPHONE 12 PRO*/
-@media only screen and (min-width: 320px) and (max-width: 768px) and (orientation: portrait){
+@media only screen and (min-width: 320px) and (max-width: 820px) and (orientation: portrait){
   /* STYLE NAVBAR MEDIA IPHONE */
   .navbar-container-general {
   display: none;
@@ -360,6 +360,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    margin: 0 auto;
   }
 
   .contenitore-section1-mobile{
@@ -595,6 +596,10 @@
 .m-section7-mobile {
   display: flex;
   flex-direction: column;
+}
+
+.img-section7-mobile {
+  margin: 0 auto;
 }
 
 .button-section6 {
