--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -155,6 +155,11 @@
 }
 
 /**style menu**/
+.menu-container-flex {
+  display: flex;
+  margin-left: 20rem;
+}
+
 .menu-container {
   display: flex;
   background-color: rgb(255, 213, 2);
@@ -216,6 +221,9 @@
   background-color: black;
   color: white;
 }
+.menu-search {
+  display: flex;
+}
 
 .menu-search-shop {
   display: flex;
@@ -236,6 +244,40 @@
   cursor: pointer;
   outline: none;
   box-shadow: none;
+}
+.search-logo.show {
+  display: flex;
+  align-items: flex-end;
+}
+
+#searchbar {
+  display: none
+}
+
+#searchbar.active {
+  display: block;
+  padding: 0px;
+  display: flex;
+  -moz-box-align: center;
+  align-items: center;
+  position: relative;
+  background-color: rgb(255, 255, 255);
+  border-radius: 1.25rem;
+}
+/* Overlay */
+.overlay-search {
+  position: fixed;
+  top: 0;
+  left: -100%; 
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  transition: left 0.1s ease-out;
+}
+
+.overlay-search.active {
+  left: 0; 
 }
 
 .heart-logo {
@@ -1310,3 +1352,4 @@ li {
 #footer-background{
   background-color: #1f1d48;
 }
+
