--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -1353,3 +1353,116 @@ li {
   background-color: #1f1d48;
 }
 
+/* STYLE OVERLAY-COOKIE */
+.cookie-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.cookie-popup {
+  background-color: #f0f0f0;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  height: 650px;
+  width: 550px;
+}
+
+.title-popup {
+  text-align: justify;
+  font-size: 1.125rem;
+  font-weight: 500;
+}
+
+.cookie-popup p {
+  margin: 0;
+  font-size: 0.75rem;
+}
+.cookie-popup h2 {
+  font-size: 1.125rem;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+}
+
+.cookie-popup a {
+  text-decoration: none;
+  color: #006db7;
+}
+
+.buttons-cookie{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.accept-cookie-btn {
+  background-color: #005ad2;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  height: 50px;
+  width: 260px;
+}
+
+.necessary-cookie-btn{
+  background-color: white;
+  color: black;
+  border: 1px solid #005ad2;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  height: 50px;
+  width: 260px;
+}
+
+.accept-cookie-btn:hover {
+  background-color: white;
+  color: black;
+  border: 1px solid #005ad2;
+}
+
+.necessary-cookie-btn:hover {
+  background-color: #c6e2f3;
+}
+
+.p1{
+  text-align: justify;
+  padding-top: 20px;
+}
+
+.p2{
+  text-align: justify;
+  padding-top: 20px;
+}
+
+.p3{
+  text-align: justify;
+  padding-top: 20px;
+}
+
+.p4{
+  text-align: justify;
+  padding-top: 20px;
+}
+
+.impostazioni-cookie {
+  padding-top: 20px;
+  
+}
+
+.impostazioni-cookie a {
+  text-decoration: none;
+  color: #005ad2;
+}
