Aggiunta feature per rendere l'overlay responsive per mobile

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -1374,7 +1374,8 @@ li {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
   height: auto;
-  width: 37.5rem;
+  min-width: 23.5rem;
+  max-width: 37.5rem;
 }
 
 .title-popup {
